# shortcake

./: .gitignore  .mypy.ini  .pre-commit-config.yaml  .yamllint  README.rst  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: delete-docker.yml  deploy-docker.yml  dev-deploy.yml  dev-teardown.yml  docker.yml  linting.yml  main-deploy.yml  pre-commit.yml  tests.yml
resources/: README.rst
resources/recipes/: cookies.json  enchiladas.json  shepherds-pie.json
scripts/: upload_recipes.py
shortcake/api/graphql/: __init__.py  ingredients.py  recipes.py  root_objects.py
shortcake/asgi/: app.py
shortcake/database/: management.py
shortcake/database/models/: __init__.py  base.py  ingredients.py  recipes.py
shortcake/util/: types.py
tests/: conftest.py
tests/api/graphql/ingredients/: test_ingredient_resolvers.py  test_ingredient_schema.py
tests/api/graphql/recipes/: test_recipe_ingredient_schema.py  test_recipe_resolvers.py  test_recipe_schema.py  test_recipe_step_schema.py
tests/database/ingredients/: test_ingredient.py
tests/database/recipes/: test_recipe.py  test_recipe_ingredient.py  test_recipe_step.py
tests/utils/: __init__.py  helpers.py  utils.py
tests/utils/fake_db/: __init__.py  ingredients.py  recipes.py
