[tool.poetry]
name = "shortcake"
version = "0.1.0"
description = ""
authors = ["Bryce Beagle <bryce dot beagle at gmail dot com>"]

[tool.poetry.dependencies]
python = "^3.8"
peewee = "^3.14.1"
sqlalchemy = "^1.4"
sqlalchemy-utils = "^0.36.8"
psycopg2-binary = "^2.8.6"
strawberry-graphql = "^0.45.4"
uvicorn = "^0.13.4"
requests = "^2.26.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
pre-commit = "^2.10.1"
black = "^20.8b1"
isort = "^5.7.0"
poethepoet = "^0.10.0"
mypy = "^0.812"
sqlalchemy-stubs = "^0.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra"
testpaths = ["tests"]
cache_dir = "tests/.pytest_cache"
xfail_strict = true

[tool.isort]
profile = "black"
src_paths = ["shortcake/"]
known_first_party = ["shortcake"]
known_tests = ["tests"]
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "TESTS", "LOCALFOLDER"]

[tool.poe.tasks]
tests = "python -m pytest"
